chore: ObjectMapper 관련 충돌 해결